--- a/index.html
+++ b/index.html
@@ -1,165 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
-  </head>
-  <body>
-    <!-- Header -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>WebStudio</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./css/styles.css" />
+	</head>
+	<body>
+		<!-- Header -->
 
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
-        </ul>
-      </nav>
+		<header>
+			<nav>
+				<a class="header-logo" href="./index.html"><span class="header-logo-accent">Web</span>Studio</a>
+				<ul class="list">
+					<li><a class="header-navigation" href="./studio.html">Studio</a></li>
+					<li><a class="header-navigation" href="./portfolio.html">Portfolio</a></li>
+					<li><a class="header-navigation" href="">Contacts</a></li>
+				</ul>
+			</nav>
 
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
-    </header>
+			<address>
+				<ul class="list">
+					<li><a class="header-address" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li><a class="header-address" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+				</ul>
+			</address>
+		</header>
 
-    <main>
-      <!-- Hero section -->
+		<main>
+			<!-- Hero section -->
 
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
-      </section>
+			<section class="hero-section">
+				<h1 class="hero-title">Effective Solutions for Your Business</h1>
+				<button type="button" class="hero-button">Order Service</button>
+			</section>
 
-      <!-- Adventages -->
+			<!-- Adventages -->
 
-      <section>
-        <h2>Our adventages</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
+			<section>
+				<h2 class="visually-hidden">Our adventages</h2>
+				<ul class="list">
+					<li>
+						<h3 class="adventage-subtitle">Strategy</h3>
+						<p class="adventages-description">
+							Our goal is to identify the business problem to walk away with the perfect and creative solution.
+						</p>
+					</li>
+					<li>
+						<h3 class="adventage-subtitle">Punctuality</h3>
+						<p class="adventages-description">
+							Bring the key message to the brand's audience for the best price within the shortest possible time.
+						</p>
+					</li>
+					<li>
+						<h3 class="adventage-subtitle">Diligence</h3>
+						<p class="adventages-description">
+							Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+						</p>
+					</li>
+					<li>
+						<h3 class="adventage-subtitle">Technologies</h3>
+						<p class="adventages-description">
+							Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+						</p>
+					</li>
+				</ul>
+			</section>
 
-      <!-- What are we doing -->
+			<!-- What are we doing -->
 
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/img1.jpg"
-              alt="Computer"
-              width="360"
-              height="300"
-            />
-          </li>
-          <li>
-            <img 
-                src="./images/img2.jpg" 
-                alt="Apps" 
-                width="360" 
-                height="300" 
-            />
-          </li>
-          <li>
-            <img 
-                src="./images/img3.jpg" 
-                alt="Phone" 
-                width="360" 
-                height="300" 
-            />
-          </li>
-        </ul>
-      </section>
+			<section>
+				<h2 class="second-title">What are we doing</h2>
+				<ul class="list">
+					<li>
+						<img src="./images/img1.jpg" alt="Computer" width="360" height="300" />
+					</li>
+					<li>
+						<img src="./images/img2.jpg" alt="Apps" width="360" height="300" />
+					</li>
+					<li>
+						<img src="./images/img3.jpg" alt="Phone" width="360" height="300" />
+					</li>
+				</ul>
+			</section>
 
-      <!-- Our team -->
+			<!-- Our team -->
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img
-              src="./images/team1.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team2.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img
-              src="./images/team3.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img
-              src="./images/team4.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
+			<section class="section-team">
+				<h2 class="second-title">Our Team</h2>
+				<ul class="list">
+					<li>
+						<img src="./images/team1.jpg" alt="Mark Guerrero" width="264" height="260" />
+						<h3 class="team-subtitle">Mark Guerrero</h3>
+						<p class="team-description">Product Designer</p>
+					</li>
+					<li>
+						<img src="./images/team2.jpg" alt="Tom Ford" width="264" height="260" />
+						<h3 class="team-subtitle">Tom Ford</h3>
+						<p class="team-description">Frontend Developer</p>
+					</li>
+					<li>
+						<img src="./images/team3.jpg" alt="Camila Garcia" width="264" height="260" />
+						<h3 class="team-subtitle">Camila Garcia</h3>
+						<p class="team-description">Marketing</p>
+					</li>
+					<li>
+						<img src="./images/team4.jpg" alt="Daniel Wilson" width="264" height="260" />
+						<h3 class="team-subtitle">Daniel Wilson</h3>
+						<p class="team-description">UI Designer</p>
+					</li>
+				</ul>
+			</section>
+		</main>
 
-    <!-- Footer -->
+		<!-- Footer -->
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
-  </body>
+		<footer class="footer">
+			<a class="footer-logo" href="./index.html"><span class="footer-logo-accent">Web</span>Studio</a>
+			<p class="footer-description">
+				Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+			</p>
+		</footer>
+	</body>
 </html>
