--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
 			<nav>
 				<a class="header-logo" href="./index.html"><span class="header-logo-accent">Web</span>Studio</a>
 				<ul class="list">
-					<li><a class="header-navigation" href="./studio.html">Studio</a></li>
+					<li><a class="header-navigation" href="./index.html">Studio</a></li>
 					<li><a class="header-navigation" href="./portfolio.html">Portfolio</a></li>
 					<li><a class="header-navigation" href="">Contacts</a></li>
 				</ul>
@@ -55,10 +55,6 @@
 							<img src="./images/work1.jpg" alt="Bank App Interface" width="360" height="300" />
 							<h2 class="work-title">Banking App Interface Concept</h2>
 							<p>App</p>
-							<p class="work-description"
-								>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-								Fruit Ecommerce App · Cloud Storage App</p
-							>
 						</a>
 					</li>
 
@@ -67,10 +63,6 @@
 							<img src="./images/work2.jpg" alt="Cashless Payment" width="360" height="300" />
 							<h2 class="work-title">Cashless Payment</h2>
 							<p class="work-type">Marketing</p>
-							<p class="work-description"
-								>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-								Fruit Ecommerce App · Cloud Storage App</p
-							>
 						</a>
 					</li>
 
@@ -79,10 +71,6 @@
 							<img src="./images/work3.jpg" alt="Meditaion App" width="360" height="300" />
 							<h2 class="work-title">Meditaion App</h2>
 							<p class="work-type">App</p>
-							<p class="work-description"
-								>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-								Fruit Ecommerce App · Cloud Storage App</p
-							>
 						</a>
 					</li>
 
@@ -91,10 +79,6 @@
 							<img src="./images/work4.jpg" alt="Taxi Service" width="360" height="300" />
 							<h2>Taxi Service</h2>
 							<p class="work-type">Marketing</p>
-							<p class="work-description"
-								>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-								Fruit Ecommerce App · Cloud Storage App</p
-							>
 						</a>
 					</li>
 
@@ -103,10 +87,6 @@
 							<img src="./images/work5.jpg" alt="Screen Illustrations" width="360" height="300" />
 							<h2>Screen Illustrations</h2>
 							<p>Design</p>
-							<p class="work-description"
-								>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-								Fruit Ecommerce App · Cloud Storage App</p
-							>
 						</a>
 					</li>
 
@@ -115,10 +95,6 @@
 							<img src="./images/work6.jpg" alt="Online Courses" width="360" height="300" />
 							<h2>Online Courses</h2>
 							<p>Marketing</p>
-							<p class="work-description"
-								>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-								Fruit Ecommerce App · Cloud Storage App</p
-							>
 						</a>
 					</li>
 
@@ -127,10 +103,6 @@
 							<img src="./images/work7.jpg" alt="Instagram Stories Concept" width="360" height="300" />
 							<h2>Instagram Stories Concept</h2>
 							<p>Design</p>
-							<p class="work-description"
-								>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-								Fruit Ecommerce App · Cloud Storage App</p
-							>
 						</a>
 					</li>
 
@@ -139,10 +111,6 @@
 							<img src="./images/work8.jpg" alt="Organic Food" width="360" height="300" />
 							<h2>Organic Food</h2>
 							<p>Web Site</p>
-							<p class="work-description"
-								>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-								Fruit Ecommerce App · Cloud Storage App</p
-							>
 						</a>
 					</li>
 
@@ -151,10 +119,6 @@
 							<img src="./images/work9.jpg" alt="Coffee" width="360" height="300" />
 							<h2>Fresh Coffee</h2>
 							<p>Web Site</p>
-							<p class="work-description"
-								>14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic
-								Fruit Ecommerce App · Cloud Storage App</p
-							>
 						</a>
 					</li>
 				</ul>
