--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<nav>
 				<a class="header-logo" href="./index.html"><span class="header-logo-accent">Web</span>Studio</a>
 				<ul class="list">
-					<li><a class="header-navigation" href="./studio.html">Studio</a></li>
+					<li><a class="header-navigation" href="/">Studio</a></li>
 					<li><a class="header-navigation" href="./portfolio.html">Portfolio</a></li>
 					<li><a class="header-navigation" href="">Contacts</a></li>
 				</ul>
